bk_ida/gccida/c3/find_replacement
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6478:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6483:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6493:21: error: expected identifier or '('
 struct replacement = find_replacement( ( rtx *)reg_rtx->fld); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6496:7: error: expected expression
if (  struct replacement != ( *loc)->fld[0].rtx || v10 != (  struct rtx_def *)reg_rtx[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6498:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)reg_rtx, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6498:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)reg_rtx, 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6499:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg_rtx), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6499:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg_rtx), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6532:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/reload.c:6542:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)*loc + 2), 
  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_replacement/src/obj/reload.o] Error 1
